Allow deleting subnets
