# routes/routes.go
@@ -72,9 +72,9 @@ func PrivateRoutes(g *gin.RouterGroup, i *controllers.IpManager) {
 	g.PATCH("/host/:hostname", i.UpdateMacAddresses) // replace a host's MAC addresses
 	g.DELETE("/host/:hostname", i.DeleteHostname)    // trash a host
 	// subnet related routes
-	g.POST("/subnet", i.CreateSubnet) // create new subnet
-	g.PATCH("/subnet/:networkname")   // update a subnet's network information
-	g.DELETE("/subnet/:networkname")  // trash a subnet
+	g.POST("/subnet", i.CreateSubnet)                // create new subnet
+	g.PATCH("/subnet/:networkname")                  // update a subnet's network information
+	g.DELETE("/subnet/:networkname", i.DeleteSubnet) // trash a subnet
 	// user related routes
 	g.POST("/user", i.CreateUser)                   // create new user
 	g.PATCH("/user/:name", i.ChangeAccountPassword) // update a user password
